manifests/habilitar-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: habilitar-frontend
spec:
  type: NodePort
  selector:
    app: habilitar-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30102
