manifests/habilitar-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habilitar-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: habilitar-frontend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habilitar-frontend
                port:
                  number: 80
